--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
 set -s escape-time 10                    # faster command sequences
-set -sg repeat-time 100                   # increase repeat timeout
+set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
 set -g prefix2 C-k                        # GNU-Screen compatible prefix
@@ -12,7 +12,7 @@ setw -q -g utf8 on
 
 set -g history-limit 5000                 # boost history
 
-bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
+# bind e new-window -n '~/.tmux.conf' "sh -c 'tmux'
 
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
@@ -121,3 +121,9 @@ if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
 
 set-window-option -g automatic-rename off
 set-option -g allow-rename off
+
+
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+run-shell ~/.tmux/tmux-continuum/continuum.tmux
+
+set -g @continuum-save-interval '600'
